[tool.poetry]
name = "ozon-api"
version = "0.1.0.1"
description = "Lib for interacting with the Ozon API"
authors = ["FxCode <dev@fxcode.ru>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mephistofox/python-ozon-api"
documentation = "https://github.com/mephistofox/python-ozon-api/blob/main/README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.5"
loguru = "^0.7.2"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
